--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,7 +37,7 @@ jobs:
         if: success()
         uses: softprops/action-gh-release@v2
         with:
-          files: *.tar.gz
+          files:  triforce-${{ runner.os }}-${{ runner.arch }}.tar.gz
 
       - name: Upload release asset
         uses: actions/upload-artifact@v4
