--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,13 +31,14 @@ jobs:
 
       - name: Compress binaries
         run: |
+          ls -lha build
           tar -czf triforce-${{ runner.os }}-${{ runner.arch }}.tar.gz -C build triforce
 
       - name: Create release
         if: success()
         uses: softprops/action-gh-release@v2
         with:
-          files:  triforce-${{ runner.os }}-${{ runner.arch }}.tar.gz
+          files: triforce-${{ runner.os }}-${{ runner.arch }}.tar.gz
 
       - name: Upload release asset
         uses: actions/upload-artifact@v4
@@ -66,6 +67,7 @@ jobs:
 
       - name: Compress binaries
         run: |
+          ls -lha
           tar -czf triforce-${{ runner.os }}-${{ runner.arch }}.tar.gz -C build trifoce
 
       - name: Create release
