-DCMAKE_POLICY_VERSION_MINIMUM=3.5

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Build
         run: |
-          cmake -B build
+          cmake -B build -DCMAKE_POLICY_VERSION_MINIMUM=3.5
           cmake --build build
 
       - name: Compress binaries
@@ -98,11 +98,8 @@ jobs:
 
      - name: Build
        run: |
-         cmake -B build -DCMAKE_BUILD_TYPE=Debug
+         cmake -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_POLICY_VERSION_MINIMUM=3.5
          cmake --build build
-       env:
-        CMAKE_PREFIX_PATH: "${{ env.QT_ROOT_DIR }}/lib/cmake"
-        WORKSPACE_DIR: ${{ github.workspace }}
 
      - name: Compress binaries (ZIP)
        run: |
