--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -93,13 +93,20 @@ jobs:
        uses: actions/checkout@v4
 
      - name: Install Dependencies
+       shell: cmd
        run: |
-         choco install -y cmake
+        choco install -y cmake
+        git clone https://github.com/microsoft/vcpkg.git
+        cd vcpkg
+        bootstrap-vcpkg.bat
 
-     - name: Build
+     - name: Build with CMake and vcpkg
+       shell: cmd
        run: |
-         cmake -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_POLICY_VERSION_MINIMUM=3.5
-         cmake --build build
+        set VCPKG_ROOT=%CD%\vcpkg
+        %VCPKG_ROOT%\vcpkg install glew
+        cmake -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_POLICY_VERSION_MINIMUM='3.5 -DCMAKE_TOOLCHAIN_FILE=%VCPKG_ROOT%\scripts\buildsystems\vcpkg.cmake
+        cmake --build build
 
      - name: Compress binaries (ZIP)
        run: |
