--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,10 @@ jobs:
 
       - name: Build
         run: |
-            cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=$PWD/vcpkg/scripts/buildsystems/vcpkg.cmake
+            cmake -S . -B build \
+            -DCMAKE_TOOLCHAIN_FILE=$PWD/vcpkg/scripts/buildsystems/vcpkg.cmake \
+            -DCMAKE_C_COMPILER=/usr/bin/gcc
+            -DCMAKE_CXX_COMPILER=/usr/bin/g++
             cmake --build build
 
       - name: Compress binaries
