--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,9 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-
+        with:
+          submodules: recursive
+ 
       - name: Install Dependencies
         run: |
           sudo apt update -y
@@ -26,7 +28,7 @@ jobs:
 
       - name: Build
         run: |
-            cmake -S . -B build
+            cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=$PWD/vcpkg/scripts/buildsystems/vcpkg.cmake
             cmake --build build
 
       - name: Compress binaries
@@ -55,14 +57,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-
+        with:
+          submodules: recursive
+ 
       - name: Install Dependencies
         run: |
           brew install cmake
 
       - name: Build
         run: |
-          cmake -B build -DCMAKE_POLICY_VERSION_MINIMUM=3.5
+          cmake -B build -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_TOOLCHAIN_FILE=$PWD/vcpkg/scripts/buildsystems/vcpkg.cmake
           cmake --build build
 
       - name: Compress binaries
@@ -91,27 +95,24 @@ jobs:
    steps:
      - name: Check out code
        uses: actions/checkout@v4
+       with:
+         submodules: recursive
 
      - name: Install Dependencies
        shell: cmd
        run: |
         choco install -y cmake
-        git clone https://github.com/microsoft/vcpkg.git
-        cd vcpkg
-        bootstrap-vcpkg.bat
 
      - name: Build with CMake
        shell: cmd
        run: |
-        set VCPKG_ROOT=%CD%\vcpkg
-        %VCPKG_ROOT%\vcpkg install glew glm
-        cmake -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_POLICY_VERSION_MINIMUM='3.5' -DCMAKE_TOOLCHAIN_FILE=%VCPKG_ROOT%\scripts\buildsystems\vcpkg.cmake
+        cmake -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_POLICY_VERSION_MINIMUM='3.5' -DCMAKE_TOOLCHAIN_FILE=%CD%\vcpkg\scripts\buildsystems\vcpkg.cmake
         cmake --build build
 
      - name: Compress binaries (ZIP)
        run: |
          cd build\Debug
-         7z a ..\..\triforce-${{ runner.os }}-${{ runner.arch }}.zip *.exe
+         7z a ..\..\triforce-${{ runner.os }}-${{ runner.arch }}.zip *
 
      - name: Create release
        if: success()
