--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.14)
 project(triforce)
 
-set (CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 14)
 
 # Dependencies managed by vcpkg (toolchain must be passed via command line)
-find_package(SDL2 CONFIG REQUIRED)
+find_package(SDL3 REQUIRED CONFIG)
 find_package(GLEW REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(OpenGL REQUIRED)
@@ -17,16 +17,13 @@ add_compile_definitions(GLM_ENABLE_EXPERIMENTAL)
 
 # Platform-specific settings
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    # macOS: silence OpenGL deprecation warnings, link Metal framework
     add_definitions(-DGL_SILENCE_DEPRECATION)
     target_link_libraries(${PROJECT_NAME} PRIVATE "-framework Metal")
 
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    # Linux: link OpenGL manually
     target_link_libraries(${PROJECT_NAME} PRIVATE -lGL)
 
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    # Windows: enable math definitions and suppress common warnings
     add_compile_definitions(_USE_MATH_DEFINES NOMINMAX)
     target_compile_definitions(${PROJECT_NAME} PRIVATE /wd4251)
 endif()
@@ -36,8 +33,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     OpenGL::GL
     GLEW::GLEW
     glm::glm
-    $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
-    $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
+    SDL3::SDL3
 )
 
 # Include local project headers
